yaml-files/istio-def/virtualservices-observability.yaml
# Grafana
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - default/microservices-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      rewrite:
        uri: /
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000

# Prometheus
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - default/microservices-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      rewrite:
        uri: /
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090

# Jaeger
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - default/microservices-gateway
  http:
    - match:
        - uri:
            prefix: /jaeger
      rewrite:
        uri: /
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 16686
